add symbols and icon

--- a/Hunitalla/Hunitalla/Hunitalla.csproj
+++ b/Hunitalla/Hunitalla/Hunitalla.csproj
@@ -2,11 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <ProjectGuid>{643e46a7-f26c-42bb-9481-cb1a029dc8ed}</ProjectGuid>
     <Authors>Casey Stratton</Authors>
     <Description>Provides measurement quantity types and associated units with fluent api and operators for expilicit or impilicit conversion.</Description>
     <Version>0.0.5</Version>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
 
     <nullable>enable</nullable>
+
+    <PackageIcon>HunitallaLogo.png</PackageIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\HunitallaLogo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
